--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
     <!-- Navigation -->
     <nav id="navbar" class="navbar navbar-expand-lg fixed-top navbar-dark" aria-label="Main navigation">
         <div class="container">
-            <a class="navbar-brand logo-text" href="index.html">Anwa Solutions</a>
+            <a class="navbar-brand logo-text" href="index.html">
+                <img src="images/anwa_logo.png" alt="Anwa Solutions Logo" style="height: 175px;">
+            </a>
+            
             <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,6 +48,7 @@
                     <li class="nav-item"><a class="nav-link" href="#features">Características</a></li>
                     <li class="nav-item"><a class="nav-link" href="#services">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="#requirements">Requisitos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="proyecto.html">Proyecto</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
                 </ul>
             </div>
