--- a/proyecto.html
+++ b/proyecto.html
@@ -143,7 +143,7 @@
                 <div class="card team-card bg-dark text-light p-4">
                     <div class="team-photo mb-3">
                         <!-- Espacio para agregar la foto de Yeiso -->
-                        <img src="images/testimonial-2.jpg" alt="Yeiso Wadnipar" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
+                        <img src="images/yeison.jpeg" alt="Yeiso Wadnipar" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
                     </div>
                     <h4 class="card-title">Yeison Wadnipar</h4>
                     <p class="card-text">Estudiande de analisis y desarrollo de software. Con una experiencia extensa en el sector, Yeison dirige al equipo de frontend hacia soluciones tecnológicas innovadoras y adaptables.</p>
