--- a/proyecto.html
+++ b/proyecto.html
@@ -130,7 +130,7 @@
                         <img src="images/andresr.jpeg" alt="Andrés Rodriguez" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
                     </div>
                     <h4 class="card-title">Andrés Rodriguez</h4>
-                    <p class="card-text">Estudiande de analisis y desarrollo de software. Andrés lidera la estrategia tecnológica de Anwa Solutions, garantizando soluciones de software eficientes y escalables.</p>
+                    <p class="card-text">Estudiante de analisis y desarrollo de software. Andrés lidera la estrategia tecnológica de Anwa Solutions, garantizando soluciones de software eficientes y escalables.</p>
                     <div class="social-links mt-3">
                         <a href="https://linkedin.com" class="text-light me-3"><i class="fab fa-linkedin fa-2x"></i></a>
                         <a href="mailto:andres@anwasolutions.com" class="text-light"><i class="fas fa-envelope fa-2x"></i></a>
@@ -146,7 +146,7 @@
                         <img src="images/yeison.jpeg" alt="Yeiso Wadnipar" class="img-fluid rounded-circle" style="width: 150px; height: 150px;">
                     </div>
                     <h4 class="card-title">Yeison Wadnipar</h4>
-                    <p class="card-text">Estudiande de analisis y desarrollo de software. Con una experiencia extensa en el sector, Yeison dirige al equipo de frontend hacia soluciones tecnológicas innovadoras y adaptables.</p>
+                    <p class="card-text">Estudiante de analisis y desarrollo de software. Con una experiencia extensa en el sector, Yeison dirige al equipo de frontend hacia soluciones tecnológicas innovadoras y adaptables.</p>
                     <div class="social-links mt-3">
                         <a href="https://linkedin.com" class="text-light me-3"><i class="fab fa-linkedin fa-2x"></i></a>
                         <a href="mailto:yeiso@anwasolutions.com" class="text-light"><i class="fas fa-envelope fa-2x"></i></a>
